Twilo/force-app/main/default/objects/CustomClassification__c/CustomClassification__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting to set gold , silver ,bronze customer value</description>
    <label>Custom Classification</label>
</CustomObject>