Twilo/force-app/main/default/objects/CustomClassification__c/fields/bronzeCustomerValue__c.field-meta.xml
<CustomField>
    <fullName>bronzeCustomerValue__c</fullName>
    <label>bronzeCustomerValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>