Twilo/force-app/main/default/objects/CustomClassification__c/fields/goldCustomerValue__c.field-meta.xml
<CustomField>
    <fullName>goldCustomerValue__c</fullName>
    <label>goldCustomerValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>