Twilo/force-app/main/default/objects/CustomClassification__c/fields/silverCustomerValue__c.field-meta.xml
<CustomField>
    <fullName>silverCustomerValue__c</fullName>
    <label>silverCustomerValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>